--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <section>
             <h4 class="h4">  Проекты</h4> 
              <div class="buttons">
-                <a class="a" href="https://abgelskij.github.io/Proect/" style="color: beige;">1 Проект</a>
+                <a class="a" href="https://abgelskij.github.io/Proect/" style="color: beige; padding-left:50px">1 Проект</a>
                 </div>
             
             
