--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <img style="text-align: center; padding: 50px;" class="img" src="img/proect1.png" alt="Proect 1" width="700" > 
           
         </section>
-        <section><img style="text-align: center; padding-left: 50px;" class="img" src="img/mipro.png" alt="Proect 1" width="700" > </section>
+        <section><img style="text-align: center; padding: 50px;" class="img" src="img/mipro.png" alt="Proect 1" width="700" > </section>
     </main>
     <footer >
 <h3 style="text-align: center; color: beige;">2023г.</h3>
